# diabetes-ensemble

./: Makefile  README.md  pyproject.toml  requirements.txt
diabetes_ensemble/: __init__.py  dataset.py  features.py  plots.py
diabetes_ensemble/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: diabetes-ensemble.ipynb
