[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diabetes_ensemble"
version = "0.0.1"
description = "A project to analyze diabetes patients. This project will use a multitude of ensemble classification models."
authors = [
  { name = "Jared Thach" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["diabetes_ensemble"]
include = ["pyproject.toml", "diabetes_ensemble/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["diabetes_ensemble"]
force-sort-within-sections = true

